# Generated by Django 5.2.12 on 2026-04-07 20:12

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('restaurants', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Floor',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100)),
                ('sort_order', models.PositiveIntegerField(default=0)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('branch', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='floors', to='restaurants.branch')),
            ],
            options={
                'ordering': ['sort_order', 'id'],
                'unique_together': {('branch', 'name')},
            },
        ),
        migrations.CreateModel(
            name='Zone',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100)),
                ('color', models.CharField(blank=True, max_length=20)),
                ('sort_order', models.PositiveIntegerField(default=0)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('floor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='zones', to='layouts.floor')),
            ],
            options={
                'ordering': ['sort_order', 'id'],
                'unique_together': {('floor', 'name')},
            },
        ),
        migrations.CreateModel(
            name='LayoutItem',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('type', models.CharField(choices=[('table', 'Table'), ('entrance', 'Entrance'), ('exit', 'Exit'), ('wc', 'WC'), ('cashier', 'Cashier'), ('kids_area', 'Kids Area'), ('wall', 'Wall'), ('divider', 'Divider'), ('decor', 'Decor')], max_length=20)),
                ('name', models.CharField(blank=True, max_length=100)),
                ('x', models.IntegerField()),
                ('y', models.IntegerField()),
                ('width', models.PositiveIntegerField()),
                ('height', models.PositiveIntegerField()),
                ('rotation', models.IntegerField(default=0)),
                ('shape', models.CharField(choices=[('round', 'Round'), ('rect', 'Rectangle'), ('icon', 'Icon')], default='rect', max_length=20)),
                ('z_index', models.IntegerField(default=0)),
                ('meta', models.JSONField(blank=True, default=dict)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('floor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='layout_items', to='layouts.floor')),
                ('zone', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='layout_items', to='layouts.zone')),
            ],
            options={
                'ordering': ['z_index', 'id'],
            },
        ),
    ]
