# Generated by Django 5.2.12 on 2026-04-07 20:41

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('layouts', '0001_initial'),
        ('restaurants', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Table',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50)),
                ('seats', models.PositiveIntegerField()),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('branch', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='tables', to='restaurants.branch')),
                ('floor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='tables', to='layouts.floor')),
                ('layout_item', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='table', to='layouts.layoutitem')),
                ('zone', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='tables', to='layouts.zone')),
            ],
            options={
                'ordering': ['id'],
                'unique_together': {('branch', 'name')},
            },
        ),
    ]
